# realtime-detection-pipeline

./: .gitignore  CMakeLists.txt  IMPLEMENTATION.md  README.md  docker-compose.yml
docs/: xcode_setup.md
lab/: lab.py
services/api/: main.py
services/batch-processor/: aggregator.py  db.py  init.sql  kafka_consumer.py  main.py  requirements.txt
services/capture-inference/: CMakeLists.txt  Dockerfile  README.md  coco_classes.h
services/capture-inference/include/: coco_classes.h  detector.h  frame_source.h  kafka_publisher.h  mjpeg_streamer.h  pipeline.h  pipeline_step.h  postprocessor.h  preprocessor.h  types.h
services/capture-inference/src/: detector.cpp  frame_source.cpp  kafka_publisher.cpp  main.cpp  mjpeg_streamer.cpp  pipeline.cpp  postprocessor.cpp  preprocessor.cpp
services/capture-inference/test/: test_detector.cpp  test_frame_source.cpp  test_pipeline_integration.cpp  test_postprocessor.cpp  test_preprocessor.cpp
services/frontend/: Dockerfile  nginx.conf  vite.config.ts
services/frontend/src/: App.tsx  config.ts
services/frontend/src/components/: ClassChart.tsx  DetectionFeed.tsx  HistoryPanel.tsx  StatusIndicator.tsx  TimelineChart.tsx  VideoFeed.tsx
services/frontend/src/hooks/: useDetectionData.ts  useHistoricalData.ts  useStreamStatus.ts
services/stream-processor/: CMakeLists.txt  Dockerfile
services/stream-processor/include/: aggregator.h  kafka_consumer.h  redis_writer.h  types.h
services/stream-processor/src/: aggregator.cpp  kafka_consumer.cpp  main.cpp  redis_writer.cpp
services/stream-processor/test/: test_aggregator.cpp  test_redis_writer.cpp
src/: main.cpp
